  be converted to JGlideMon.properties.
- The Stuck configuration tab has been renamed Restarter.
  Additionally, options have been added to restart Glider
  when an exception log entry is received shortly before
  a status entry indicating Glider stopped as well as when
  "Inventory does not appear to be going up" (I have this
  problem when BottomlessBag autosells it lags).

Version 0.14
------------
- Sending chat is now at the bottom of the Chat tab and
  the Keys tab has been removed.
- Now when keys are sent, /stopglide is sent first, followed
  by the keys, followed by /startglide (if Glider was already
  running). Also, separate /queuekeys commands are sent for an
  initial enter (#13#), the slash, and the slash command with
  a slight delay in between each to help account for the 
  problems with /queuekeys not always sending the keys.
  This is also reflected in PHPGlideMon. 
  It may not be perfect but I'm pretty sure the real problem
  is with Glider.
- Added Reply and Guild options for sending chat.
- Added the use of the "/escapehi on" command. Special characters
  should now be seen in the logs. Note that you won't be able
  to send the special characters, but you can at least see them.
  This means you cannot whisper people with special characters
  in their name directly. This is a limitation of Glider's remote
  interface as far as I can tell. You can send a reply message 
  instead of a regular whisper if they were the last person to
  whisper you.
- Changed it so that logging.properties and logging.debug.properties
  are now embedded within JGlideMon.jar and not in the base folder.
  You may delete these files if you are upgrading. Not deleting them
  will not cause any harm, but they will just sit there.
- The Experience pane (time to level, xp progress bar, etc.) will now
  be hidden if you are at the level cap. I have programmed it such
  that it will reappear if your xp percentage is greater than 1%,